Updating index.html and adding link to link.html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<metacharset="utf-8">
+<title>First HTML Practice</title>
+</head>
+
+<body>
 <h1>Hello World!</h1>
 <p>This is a paragraph that containes only one sentence.</p>
 <h3>Hello World!</h3>
+<a href=link.html>Back to homepage</a>
+</body>
