updating first-audio.html

--- a/first-audio.html
+++ b/first-audio.html
@@ -7,7 +7,9 @@
 <body>
 <h1>My first audio page</h1>
 <p>This is my first html page with mp3 audio</p>
+<audio controls>
 <source src="audio/despasito.mp3" type="audio/mpeg">
 <a href="audio/despasito.mp3">Despasito</a>
+</audio>
 </body>
 </html>
