--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
     <title>First Practice With Lists</title>
   </head>
   <body>
-    <h1>My first practice with all lists type</h1>
+    <h1>My first practice with all list types</h1>
       <p>This is my first html page with practice on all lists</p>
       <ul>
        <li>Natasha</li>
