making minor changes to text-basics.html

--- a/text-basics.html
+++ b/text-basics.html
@@ -16,7 +16,7 @@
   <ul>
     <li>Right single quote:&rsquo;</li>
 	<li>Left single quote: &lsquo;</li>
-	<li>Right double quote: &rdqui;</li>
+	<li>Right double quote: &rdquo;</li>
 	<li>Left double quote: &ldquo;</li>
 	<li>Trademark symbol: &trade;</li>
 	<li>Copyright symbol: &copy;</li>
@@ -24,8 +24,5 @@
 	<li>Greater than: &gt;</li>
 	<li>Less than: &lt;</li>
   </ul>
-	
-    	
-  
 </body>
 </html>
