--- a/semantic.html
+++ b/semantic.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<metachar="utf-8">
-<title>Semantic and Organisation</title>
-</head>
-<body>
-<header>
-<h1>My first practise on Semantic and Organisation in HTML</h1>
-</header>
-<article>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit est, imperdiet quis auctor quis, suscipit a mauris. Nam semper porttitor enim, rhoncus facilisis justo sagittis et. Donec nulla nibh, hendrerit non purus eu, sagittis iaculis mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae iaculis ligula. Vivamus porttitor erat at ligula faucibus ultricies. Aliquam tincidunt mauris sit amet ipsum efficitur placerat. Phasellus vitae semper dui, nec tempor velit. Nullam velit justo, gravida at hendrerit sed, blandit a nunc. In et imperdiet neque. Proin sit amet justo mattis, vulputate lacus vitae, ornare nisi.</p>
-</article>
-<footer>
-This is footer of my html page
-</footer>
-<aside>
-This is aside note for my html page
-</aside>
-</body>
+	<head>
+		<metachar="utf-8">
+		<title>Semantic and Organisation</title>
+	</head>
+	<body>
+		<header>
+			<h1>My first practise on Semantic and Organisation in HTML</h1>
+			<nav>
+				<ul>
+					<li><a href="text-basics.html">Text Basics</a></li>
+					<li><a href="list.html">List</a></li>
+					<li><a href="first-video.html">First Video</a></li>
+					<li><a href="first-image.html">First Image</a></li>
+					<li><a href="first-audio.html">First Audio</a></li>
+					<li><a href="first-bulleted.html">First Bulleted</a></li>
+				 </ul>
+			</nav>
+		</header>
+		<article>
+		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit est, imperdiet quis auctor quis, suscipit a mauris. Nam semper porttitor enim, rhoncus facilisis justo sagittis et. Donec nulla nibh, hendrerit non purus eu, sagittis iaculis mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae iaculis ligula. Vivamus porttitor erat at ligula faucibus ultricies. Aliquam tincidunt mauris sit amet ipsum efficitur placerat. Phasellus vitae semper dui, nec tempor velit. Nullam velit justo, gravida at hendrerit sed, blandit a nunc. In et imperdiet neque. Proin sit amet justo mattis, vulputate lacus vitae, ornare nisi.</p>
+		</article>
+		<footer>
+		  This is footer of my html page
+		</footer>
+		<aside>
+		  This is aside note for my html page
+		</aside>
+	</body>
 </html>
