Adding nav section to list.html, first-audio.html, first-bulleted.html, first-image.html, first-video.html

--- a/first-audio.html
+++ b/first-audio.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-<metacharset="utf-8">
-<title>First Audio</title>
-</head>
-<body>
-<h1>My first audio page</h1>
-<p>This is my first html page with mp3 audio</p>
-<audio controls>
-<source src="audio/despasito.mp3" type="audio/mpeg">
-<a href="audio/despasito.mp3">Despasito</a>
-</audio>
-</body>
+	<head>
+		<metacharset="utf-8">
+		<title>First Audio</title>
+	</head>
+	<body>
+		<h1>My first audio page</h1>
+		<nav>
+			<ul>
+				<li><a href="semantic.html">Back to homepage</a>
+				<li><a href="text-basics.html">Text Basics</a></li>
+				<li><a href="list.html">List</a></li>
+				<li><a href="first-video.html">First Video</a></li>
+				<li><a href="first-image.html">First Image</a></li>
+				<li><a href="first-bulleted.html">First Bulleted</a></li>
+			 </ul>
+		</nav>
+		<p>This is my first html page with mp3 audio</p>
+		<audio controls>
+			<source src="audio/despasito.mp3" type="audio/mpeg">
+			<a href="audio/despasito.mp3">Despasito</a>
+		</audio>
+	</body>
 </html>
