--- a/first-bulleted.html
+++ b/first-bulleted.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<metacharset="utf-8">
-<title>First Bulleted List</title>
-</head>
-<body>
-<h1>My first bulleted list</h1>
-<p>This is my first html page with bulleted list</p>
-<ul>
-<li>
-First 
-</li>
-<li>
-Second 
-<ul> 
-<li> 
-First in Second
-</li>
-<li>
-Secong in Second
-</li>
-</li>
-</ul>
-<li>
-Third
-</li>
-</li>
-</ul>
-</body>
+	<head>
+		<metacharset="utf-8">
+		<title>First Bulleted List</title>
+	</head>
+	<body>
+		<h1>My first bulleted list</h1>
+		<!-- this is a comment -->
+		<nav>
+			<ul>
+			    <li><a href="semantic.html">Back to homepage</a>
+				<li><a href="text-basics.html">Text Basics</a></li>
+				<li><a href="list.html">List</a></li>
+				<li><a href="first-video.html">First Video</a></li>
+				<li><a href="first-image.html">First Image</a></li>
+			 </ul>
+		</nav>
+		<p>This is my first html page with bulleted list</p>
+		<ul>
+		<li>
+		First 
+		</li>
+		<li>
+		Second 
+		<ul> 
+		<li> 
+		First in Second
+		</li>
+		<li>
+		Secong in Second
+		</li>
+		</li>
+		</ul>
+		<li>
+		Third
+		</li>
+		</li>
+		</ul>
+	</body>
 </html>
