--- a/first-image.html
+++ b/first-image.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<metacharset="utf-8">
-<title>First Image</title>
-</head>
-<body>
-<h1>This is my first uploaded picture</h1>
-<p>This is a paragrahp for my first uploaded picture</p>
-<img src="pictures/photo-firework.jpg" alt="firework"
-</body>
+	<head>
+		<metacharset="utf-8">
+		<title>First Image</title>
+	</head>
+	<body>
+		<h1>This is my first uploaded picture</h1>
+		<nav>
+			<ul>
+			    <li><a href="semantic.html">Back to homepage</a>
+				<li><a href="text-basics.html">Text Basics</a></li>
+				<li><a href="list.html">List</a></li>
+				<li><a href="first-video.html">First Video</a></li>
+				<li><a href="first-audio.html">First Audio</a></li>
+				<li><a href="first-bulleted.html">First Bulleted</a></li>
+			 </ul>
+		</nav>
+		<p>This is a paragrahp for my first uploaded picture</p>
+		<img src="pictures/photo-firework.jpg" alt="firework"
+	</body>
 </html>
