--- a/list.html
+++ b/list.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <h1>My first practice with all list types</h1>
+	<nav>
+		<ul>
+			<li><a href="semantic.html">Back to homepage</a>
+			<li><a href="text-basics.html">Text Basics</a></li>
+			<li><a href="first-video.html">First Video</a></li>
+			<li><a href="first-image.html">First Image</a></li>
+			<li><a href="first-audio.html">First Audio</a></li>
+			<li><a href="first-bulleted.html">First Bulleted</a></li>
+		 </ul>
+	 </nav>
       <p>This is my first html page with practice on all lists</p>
       <ul>
        <li>Natasha</li>
