--- a/first-video.html
+++ b/first-video.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-<metacharset="utf-8">
-<title>First Video</title>
-</head>
-<body>
-<h1>My first Video page<h1>
-<p>This is my first html page with video file<p>
-<video controls>
-<source src="video/cute.mp4" type="video/mp4">
-You web browser is outdated and does not support HTML vudeo. Please consider <a href="http://browsehappy.com/">uptading</a>.
-</video>
-</body>
+	<head>
+		<metacharset="utf-8">
+		<title>First Video</title>
+	</head>
+	<body>
+		<h1>My first Video page<h1>
+		<nav>
+			<ul>
+				<li><a href="semantic.html">Back to homepage</a>
+				<li><a href="text-basics.html">Text Basics</a></li>
+				<li><a href="list.html">List</a></li>
+				<li><a href="first-image.html">First Image</a></li>
+				<li><a href="first-audio.html">First Audio</a></li>
+				<li><a href="first-bulleted.html">First Bulleted</a></li>
+			 </ul>
+		</nav>
+		<p>This is my first html page with video file<p>
+		<video controls>
+			<source src="video/cute.mp4" type="video/mp4">
+			You web browser is outdated and does not support HTML vudeo. Please consider <a href="http://browsehappy.com/">uptading</a>.
+		</video>
+	</body>
 </html>
