--- a/text-basics.html
+++ b/text-basics.html
@@ -6,6 +6,15 @@
 </head>
 <body>
   <h1>This is heading number one</h1> <!-- this is a comment -->
+  <nav>
+    <ul>
+	  <li><a href="semantic.html">Back to homepage</a>
+	  <li><a href="first-video.html">First Video</a></li>
+	  <li><a href="first-image.html">First Image</a></li>
+	  <li><a href="first-audio.html">First Audio</a></li>
+	  <li><a href="first-bulleted.html">First Bulleted</a></li>
+	</ul>
+  </nav>
   <h2>This is heading number two</h2>
   <h3>This is heading number three</h3>
   <h4>This is heading number four</h4>
