updating semantic.html

--- a/semantic.html
+++ b/semantic.html
@@ -18,12 +18,27 @@
 				 </ul>
 			</nav>
 		</header>
+		
 		<article>
-		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit est, imperdiet quis auctor quis, suscipit a mauris. Nam semper porttitor enim, rhoncus facilisis justo sagittis et. Donec nulla nibh, hendrerit non purus eu, sagittis iaculis mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae iaculis ligula. Vivamus porttitor erat at ligula faucibus ultricies. Aliquam tincidunt mauris sit amet ipsum efficitur placerat. Phasellus vitae semper dui, nec tempor velit. Nullam velit justo, gravida at hendrerit sed, blandit a nunc. In et imperdiet neque. Proin sit amet justo mattis, vulputate lacus vitae, ornare nisi.</p>
+		   
+		   <header>
+			    <h1>Sample page</h1>
+			</header>
+			
+			<div class="article-body">
+		  <p>Lorem <span class="brand-color">ipsum</span> dolor sit amet, consectetur adipiscing elit. Donec elit est, imperdiet quis auctor quis, suscipit a mauris. Nam semper porttitor enim, rhoncus facilisis justo sagittis et. Donec nulla nibh, hendrerit non purus eu, sagittis iaculis mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae iaculis ligula. Vivamus porttitor erat at ligula faucibus ultricies. Aliquam tincidunt mauris sit amet ipsum efficitur placerat. Phasellus vitae semper dui, nec tempor velit. Nullam velit justo, gravida at hendrerit sed, blandit a nunc. In et imperdiet neque. Proin sit amet justo mattis, vulputate lacus vitae, ornare nisi.</p>
+		    </div> <!-- /article-body -->
+			
+			<footer>
+			Posted in news category
+			</footer>
+			
 		</article>
+		
 		<footer>
 		  This is footer of my html page
 		</footer>
+		
 		<aside>
 		  This is aside note for my html page
 		</aside>
