adding select-form

--- a/select-form.html
+++ b/select-form.html
@@ -18,16 +18,29 @@
 			<option value="four">4</option>
 			<option value="five">5</option>
 		</select>
+		<input type="submit" value="Submit">
 		
 		<h1>Option radio</h1>
 		<fieldset>
-		<legend>Select your letter<legend>
-		<input type="radio" id="a" name="letters" value="a"><label for="a">A</label>
-		<input type="radio" id="b" name="letters" value="b"><label for="b">B</label>
-		<input type="radio" id="c" name="letters" value="c"><label for="c">C</label>
-		<input type="radio" id="d" name="letters" value="d"><label for="d">D</label>
-		<input type="radio" id="e" name="letters" value="e"><label for="e">E</label>
+			<legend>Select your letter<legend>
+			<input type="radio" id="a" name="letters" value="a"><label for="a">A</label>
+			<input type="radio" id="b" name="letters" value="b"><label for="b">B</label>
+			<input type="radio" id="c" name="letters" value="c"><label for="c">C</label>
+			<input type="radio" id="d" name="letters" value="d"><label for="d">D</label>
+			<input type="radio" id="e" name="letters" value="e"><label for="e">E</label>
 		</fieldset>
+		<input type="submit" value="Save!">
+		
+		<h1>Option checkbox</h1>
+		<fieldset>
+		    <legend>Select your color(all that apply)</legend>
+			<input type="checkbox" id="white" name="colors" value="white"><label for="white">White</label>
+			<input type="checkbox" id="black" name="colors" value="black"><label for="black">Black</label>
+			<input type="checkbox" id="yellow" name="colors" value="yellow"><label for="yellow">Yellow</label>
+			<input type="checkbox" id="green" name="colors" value="green"><label for="green">Green</label>
+			<input type="checkbox" id="orange" name="colors" value="orange"><label for="orange">Orange</label>
+		</fieldset>
+		<input type="submit" value="Go!">
 		
 		
 		
