--- a/cascade.html
+++ b/cascade.html
@@ -10,9 +10,11 @@
 	    <h1>Cascade</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur est enim, in consequat leo malesuada id. Nullam turpis lorem, pharetra et tincidunt id, dictum at lectus. Donec enim dolor, viverra a ultrices at, euismod a erat. Proin arcu augue, malesuada non erat a, rhoncus pretium est. Pellentesque vitae maximus odio. Proin eget tincidunt quam. Vivamus venenatis arcu eget massa porta malesuada. Pellentesque eu sem egestas, euismod leo eu, tempus sapien. Pellentesque id nisl eget magna convallis porttitor in in libero. Quisque at est at mauris ultricies convallis id nec nibh. Morbi eget congue quam, sit amet dapibus libero. Fusce convallis enim a ultrices elementum. Nam tristique pellentesque pharetra. Etiam dictum facilisis arcu, ac sodales massa fringilla non. Ut mauris neque, tempus id orci et, elementum mollis lorem. Aenean aliquam mauris at risus facilisis feugiat non id purus.</p>
 		<p class="fun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur est enim, in consequat leo malesuada id. Nullam turpis lorem, pharetra et tincidunt id, dictum at lectus. Donec enim dolor, viverra a ultrices at, euismod a erat. Proin arcu augue, malesuada non erat a, rhoncus pretium est. Pellentesque vitae maximus odio. Proin eget tincidunt quam. Vivamus venenatis arcu eget massa porta malesuada. Pellentesque eu sem egestas, euismod leo eu, tempus sapien. Pellentesque id nisl eget magna convallis porttitor in in libero. Quisque at est at mauris ultricies convallis id nec nibh. Morbi eget congue quam, sit amet dapibus libero. Fusce convallis enim a ultrices elementum. Nam tristique pellentesque pharetra. Etiam dictum facilisis arcu, ac sodales massa fringilla non. Ut mauris neque, tempus id orci et, elementum mollis lorem. Aenean aliquam mauris at risus facilisis feugiat non id purus.</p>
-		<footer>This is the footer of the body section</footer>
+		<footer>
+		    <p>This is the footer of the body section</p>
+		</footer>
 	</body>
 	<footer>
-	<p>This is the footer of the footer section</p>
+		<p>This is the footer of the footer section</p>
 	</footer>
 </html>
