cascade.css 5 and cascade.html ?

--- a/cascade.html
+++ b/cascade.html
@@ -15,6 +15,6 @@
 		</footer>
 	</body>
 	<footer>
-		<p>This is the footer of the footer section</p>
+		<p class="blue">This is the footer of the footer section</p>
 	</footer>
 </html>
