--- a/box.html
+++ b/box.html
@@ -3,6 +3,7 @@
     <head>
 		<metacharset="utf-8">
 		<title>My First Box Model</title>
+		<link rel=stylesheet href="box.css">
 	</head>
 	<body>
 	    <h1>Box Model</h1>
