updating floats.css

--- a/floats.html
+++ b/floats.html
@@ -3,7 +3,7 @@
     <head>
 	    <title>Float</title>
 		<metacharset="utf-8">
-		<link rel=styleshet href="floats.css">
+		<link rel=stylesheet href="floats.css">
 	</head>
 	<body>
 	    <div class="container">
